--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "grunt-stripcomments": "0.7.2",
     "license-downloader": "1.0.8",
     "license-report": "6.5.0",
+    "node-rsa": "^1.1.1",
     "npm-run-all": "4.1.5"
   },
   "devDependencies": {
